[tool.poetry]
name = "py.deduplicator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aio-pika = "^8.2.2"
redis = "^4.3.4"
pydantic = {extras = ["dotenv"], version = "^1.10.2"}

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
pytest-asyncio = "^0.19.0"
fakeredis = "^1.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
